--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
     "test": "echo 'Working on it'"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
     "clipboard-copy": "^3.1.0",
     "express": "^4.14.0",
     "gh-badges": "^2.2.1",
     "next": "latest",
-    "next-images": "^1.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-highlight": "^0.12.0",
-    "react-modal2": "^5.0.0",
+    "react-modal2": "^5.0.1",
+    "react-redux": "^7.1.1",
     "react-select": "^3.0.4",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "@zeit/next-css": "^1.0.1",
+    "cross-env": "^5.2.0",
+    "next-images": "^1.1.2",
+    "webpack-bundle-analyzer": "^3.4.1"
   }
 }
