--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clipboard-copy": "^3.1.0",
     "express": "^4.14.0",
     "gh-badges": "^2.2.1",
+    "new-github-issue-url": "^0.2.1",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
