--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "start": "cross-env NODE_ENV=production node server.js",
     "test": "echo 'Working on it'"
   },
+  "engines": {
+    "node": ">=10"
+  },
   "dependencies": {
     "clipboard-copy": "^3.1.0",
     "express": "^4.14.0",
